[package]
name = "serial-pipe"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.4", features = ["derive"] }
serialport = {version = "4.2.2", features = ["default"]}
utf8-read = "0.4.0"
